Fix text align

--- a/src/styles/Archive.module.scss
+++ b/src/styles/Archive.module.scss
@@ -68,6 +68,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      text-align: left;
     }
     svg {
       width: 1rem;
